# 4InARow

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/certificates/: UnipiCA_cert.pem  UnipiCA_crl.pem
src/client/handler/: GameHandler.cpp  GameHandler.h  Handler.cpp  Handler.h  HandshakeHandler.cpp  HandshakeHandler.h  PreGameHandler.cpp  PreGameHandler.h
src/client/keys/: Alice_privkey.pem  Alice_pubkey.pem  Bob_privkey.pem  Bob_pubkey.pem  Claire_privkey.pem  Dan_privkey.pem  Dan_pubkey.pem
src/crypto/: AuthenticatedEncryption.cpp  AuthenticatedEncryption.h  CMakeLists.txt  CSPRNG.cpp  CSPRNG.h  Certificate.cpp  Certificate.h  CertificateStore.cpp  CertificateStore.h  DiffieHellman.cpp  DiffieHellman.h  DigitalSignature.cpp  DigitalSignature.h  SHA256.cpp  SHA256.h
src/exception/: CMakeLists.txt  CryptoException.cpp  CryptoException.h  SerializationException.cpp  SerializationException.h  SocketException.cpp  SocketException.h
src/game/: CMakeLists.txt  FourInARow.cpp  FourInARow.h  Player.cpp  Player.h
src/message/: CMakeLists.txt  Challenge.cpp  Challenge.h  ClientHello.cpp  ClientHello.h  EndHandshake.cpp  EndHandshake.h  InfoMessage.cpp  InfoMessage.h  Message.cpp  Message.h  Move.cpp  Move.h  Player.cpp  Player.h  Player1Hello.cpp  Player1Hello.h  Player2Hello.cpp  Player2Hello.h  PlayerList.cpp  PlayerList.h  PlayerListMessage.cpp  PlayerListMessage.h  PlayerMessage.cpp  PlayerMessage.h  ServerHello.cpp  ServerHello.h
src/server/: CMakeLists.txt  main.cpp
src/server/certificate/: 4InARow_cert.pem  4InARow_privkey.pem
src/server/handler/: AvailableClientHandler.cpp  AvailableClientHandler.h  ConnectedClientHandler.cpp  ConnectedClientHandler.h  Handler.cpp  Handler.h  HandshakeClientHandler.cpp  HandshakeClientHandler.h  MatchmakingClientHandler.cpp  MatchmakingClientHandler.h  NewClientHandler.cpp  NewClientHandler.h  PlayingClientHandler.cpp  PlayingClientHandler.h
src/server/players/: Claire_pubkey.pem
src/socket/: CMakeLists.txt  InputMultiplexer.cpp  InputMultiplexer.h  InputMultiplexing.cpp  InputMultiplexing.h  TcpSocket.cpp  TcpSocket.h  TcpSocketHasher.cpp  TcpSocketHasher.h
src/utils/: CMakeLists.txt  Constants.cpp  Constants.h  Utils.cpp  Utils.h
